<resources>
    <string name="app_name">Laundry</string>
    <string name="card_pelanggan_id">id pelanggan</string>
    <string name="alamat">id alamat</string>
    <string name="no_hp">id no_hp</string>
    <string name="card_pegawai">id pegawai</string>
    <string name="nama_pegawai">employee name</string>
    <string name="hubungi">contact</string>
    <string name="lihat">look</string>
    <string name="tambah_pelanggan">add customer</string>
    <string name="nama_pelanggan">username</string>
    <string name="nama_lengkap">full name</string>
    <string name="nama_cabang">branch name</string>
    <string name="_nama_pelanggan">_customer_name</string>
    <string name="cabang">branch</string>
    <string name="sukses">sukses+data</string>
    <string name="sukses_simpan_pelanggan">sukses simpan pelanggan</string>
    <string name="gagal_simpan_pelanggan">failed to save customers</string>
    <string name="simpan">save</string>
    <string name="nama">name</string>
    <string name="pilih_pelanggan">select customer</string>
    <string name="pilih_layanan">select service</string>
    <string name="tambahan">addition</string>
    <string name="proses">process</string>
    <string name="data_pelanggan">customer data</string>
    <string name="layanan_utama">main service</string>
    <string name="layanan_tambahan">additional services</string>
    <string name="pembayaran">payment</string>
    <string name="pilih_metode_pembayaran">select payment method</string>
    <string name="bayar_nanti">pay later</string>
    <string name="tunai">cash</string>
    <string name="qris">qris</string>
    <string name="dana">dana</string>
    <string name="gopay">gopay</string>
    <string name="ovo">ovo</string>
    <string name="batal">cancel</string>
    <string name="konfirmasi_data">data confirmation</string>
    <string name="cuci_setrika_3kg">wash iron</string>
    <string name="total_bayar">total payment</string>
    <string name="selamat_datang">welcome</string>
    <string name="selamat_login_untuk_melanjutkan">Welcome login to continue</string>
    <string name="login">login</string>
    <string name="pewangi_aroma_melati">jasmine fragrance</string>
    <string name="belum_bayar">not yet paid</string>
    <string name="bayar_sekarang">pay now</string>
    <string name="Tambahan">Add</string>
</resources>