<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/cvPegawai"
    android:layout_width="407dp"
    android:layout_height="220dp"
    android:layout_margin="5dp"
    android:padding="16dp"
    tools:layout_editor_absoluteX="2dp"
    tools:layout_editor_absoluteY="67dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="10dp">

        <TextView
            android:id="@+id/idPegawai"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/card_pegawai"
            android:textSize="16sp"
            android:textStyle="bold"
            android:paddingBottom="4dp"
            android:layout_marginStart="5dp"
            android:layout_marginTop="10dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/nama_pegawai"
            android:textSize="16sp"
            android:paddingBottom="4dp"
            android:layout_marginStart="5dp"
            android:layout_marginTop="30dp"/>

        <TextView
            android:id="@+id/tvNama"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/alamat"
            android:textSize="16sp"
            android:paddingBottom="4dp"
            android:layout_marginStart="5dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/no_hp"
            android:textSize="16sp"
            android:paddingBottom="4dp"
            android:layout_marginStart="5dp"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:orientation="horizontal"
            android:gravity="center"
            android:layout_marginTop="10dp">

            <Button
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/hubungi"
                android:backgroundTint="#30175F"
                android:textColor="@android:color/white"
                android:layout_marginEnd="10dp"
                android:layout_marginStart="5dp"/>

            <Button
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/lihat"
                android:backgroundTint="#30175F"
                android:textColor="@android:color/white"
                android:layout_marginEnd="10dp"
                android:layout_marginStart="5dp"/>
        </LinearLayout>

    </LinearLayout>

</androidx.cardview.widget.CardView>