<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/tvTambahPelanggan"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".pelanggan.TambahPelanggan">

    <TextView
        android:id="@+id/tvTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/nama_pelanggan"
        android:layout_marginStart="50dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:textSize="30sp"
        android:textStyle="bold"
        android:textColor="@color/black"/>

    <TextView
        android:id="@+id/tvNama"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/nama_lengkap"
        android:textSize="15sp"
        android:textColor="@color/black"
        android:layout_marginStart="10dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvTitle"/>

    <EditText
        android:id="@+id/etgaris1"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:textColor="@color/black"
        android:hint="@string/nama_lengkap"
        android:paddingLeft="10dp"
        android:background="@drawable/rectangle"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        app:layout_constraintTop_toBottomOf="@id/tvNama"
        app:layout_constraintEnd_toEndOf="parent"/>

    <TextView
        android:id="@+id/tvAlamat"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/alamat"
        android:textSize="15sp"
        android:textColor="@color/black"
        android:layout_marginStart="10dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etgaris1"/>

    <EditText
        android:id="@+id/etgaris2"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:textColor="@color/black"
        android:hint="Alamat"
        android:paddingLeft="10dp"
        android:background="@drawable/rectangle"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        app:layout_constraintTop_toBottomOf="@+id/tvAlamat"/>

    <TextView
        android:id="@+id/tvNo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/no_hp"
        android:textSize="15sp"
        android:textColor="@color/black"
        android:layout_marginStart="10dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etgaris2"/>

    <EditText
        android:id="@+id/etgaris3"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:background="@drawable/rectangle"
        android:hint="No HP Aktif"
        android:textColor="@color/black"
        android:layout_marginEnd="20dp"
        android:layout_marginStart="20dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvNo" />

    <TextView
        android:id="@+id/tvcabang"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Nama Cabang"
        android:textSize="15sp"
        android:textColor="@color/black"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="50dp"
        app:layout_constraintTop_toBottomOf="@id/etgaris3"
        app:layout_constraintStart_toStartOf="parent"/>

    <EditText
        android:id="@+id/etgaris4"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:background="@drawable/rectangle"
        android:hint="Nama Cabang"
        android:textColor="@color/black"
        android:layout_marginEnd="20dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="5dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvcabang" />

    <Button
        android:id="@+id/btsimpan"
        android:layout_width="250dp"
        android:layout_height="60dp"
        android:layout_marginTop="20dp"
        app:layout_constraintTop_toBottomOf="@id/etgaris4"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:text="Simpan"
        android:textSize="20dp"/>




</androidx.constraintlayout.widget.ConstraintLayout>